--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,56 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Glamo</title>
+    <style>
+      .loader-container {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      @keyframes bouncing-loader {
+        to {
+          opacity: 0.1;
+          transform: translate3d(0, -16px, 0);
+        }
+      }
+
+      .bouncing-loader {
+        display: flex;
+        justify-content: center;
+      }
+
+      .bouncing-loader > div {
+        width: 20px;
+        height: 20px;
+        margin: 3rem 0.3rem;
+        background: #0E1526;
+        border-radius: 50%;
+        animation: bouncing-loader 0.6s infinite alternate;
+      }
+
+      .bouncing-loader > div:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      .bouncing-loader > div:nth-child(3) {
+        animation-delay: 0.4s;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loader-container">
+        <div class="bouncing-loader">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
